--- a/demo/Calendar.html
+++ b/demo/Calendar.html
@@ -26,21 +26,24 @@
                     <p>通过设置属性<code>disabled:1</code>、<code>readOnly:1</code>可以改变日历的状态。</p>
                 </div>
                 <div class="example ui-demo-light-stage">
-                    <div class="row">
-                        <span class="cal-desc">默认样式：</span><input
-                        data-ui="type:Calendar"
-                        data-ui-extension-calendaredit-type="CalendarEdit"
-                        />
-                    </div>
-                    <div class="row">
-                        <span class="cal-desc">两个：</span><input data-ui="type:Calendar;id:twoMonths;twoMonths:true;" data-ui-extension-calendaredit-type="CalendarEdit" />
-                    </div>
-                    <div class="row">
-                        <span class="cal-desc">不可用：</span><input data-ui="type:Calendar;disabled:1" data-ui-extension-calendaredit-type="CalendarEdit" />
-                    </div>
-                    <div class="row">
-                        <span class="cal-desc">只读：</span><input data-ui="type:Calendar;readOnly:1" data-ui-extension-calendaredit-type="CalendarEdit" />
-                    </div>
+                    <form data-ui="type:Form;id:form;autoValidate:true;">
+                        <div class="row">
+                            <span class="cal-desc">默认样式：</span><input
+                            data-ui="type:Calendar;id:oneMonth;"
+                            />
+                        </div>
+                        <div class="row">
+                            <span class="cal-desc">两个：</span><input data-ui="type:Calendar;id:twoMonths;twoMonths:true;name:twoMonths;" 
+                            data-ui-extension-calendaredit-type="CalendarEdit" />
+                        </div>
+                        <div class="row">
+                            <span class="cal-desc">不可用：</span><input data-ui="type:Calendar;disabled:1" data-ui-extension-calendaredit-type="CalendarEdit" />
+                        </div>
+                        <div class="row">
+                            <span class="cal-desc">只读：</span><input data-ui="type:Calendar;readOnly:1" data-ui-extension-calendaredit-type="CalendarEdit" />
+                        </div>
+                        <button type="submit" data-ui-type="Button" data-ui-id="submit">保存</button>
+                    </form>
                 </div>
                 <h2>点击自动隐藏</h2>
                 <div class="intro">
@@ -88,6 +91,7 @@
         require(
             [
                 'esui',
+                'esui/Form',
                 'esui/Calendar',
                 'esui/extension/CalendarEdit',
                 'esui/Tab',
@@ -103,11 +107,21 @@
                 ui.get('error').showValidationMessage('invalid', '时间错误！');
                 ui.get('range').setRange({
                     begin: new Date(2015, 6, 3),
-                    end: new Date(2015, 6, 7)
+                    end: new Date(2017, 6, 7)
+                });
+                ui.get('twoMonths').setProperties({
+                    rawValue: new Date(2016, 8, 1)
+                });
+                ui.get('oneMonth').setRange({
+                    begin: new Date(2015, 6, 3),
+                    end: new Date(2017, 6, 7)
+                });
+                ui.get('oneMonth').setProperties({
+                    rawValue: new Date(2017, 8, 1)
                 });
                 ui.get('twoMonths').on('changed', function() {
                     console.log('changed')
-                })
+                });
             }
         );
         </script>
