fix Calendar bug

--- a/demo/Calendar.html
+++ b/demo/Calendar.html
@@ -29,11 +29,11 @@
                     <form data-ui="type:Form;id:form;autoValidate:true;">
                         <div class="row">
                             <span class="cal-desc">默认样式：</span><input
-                            data-ui="type:Calendar;id:oneMonth;" data-ui-extension-calendaredit-type="CalendarEdit"
+                            data-ui="type:Calendar;id:oneMonth;name:oneMonth;" data-ui-extension-calendaredit-type="CalendarEdit"
                             />
                         </div>
                         <div class="row">
-                            <span class="cal-desc">两个：</span><input data-ui="type:Calendar;id:twoMonths;twoMonths:true;name:twoMonths;" />
+                            <span class="cal-desc">两个：</span><input data-ui="type:Calendar;id:twoMonths;twoMonths:true;name:twoMonths;" data-ui-extension-calendaredit-type="CalendarEdit" />
                         </div>
                         <div class="row">
                             <span class="cal-desc">不可用：</span><input data-ui="type:Calendar;disabled:1" data-ui-extension-calendaredit-type="CalendarEdit" />
