--- a/demo/Calendar.html
+++ b/demo/Calendar.html
@@ -93,6 +93,7 @@
                 'esui/Form',
                 'esui/Calendar',
                 'esui/extension/CalendarEdit',
+                'esui/validator/DateRangeRule',
                 'esui/Tab',
                 'esui/TextBox',
                 'demo'
